002-pod.yaml
apiVersion: v1
kind: Pod
# ...
spec:
  containers:
  - name: fizbuzz
    resources:
      requests:
        cpu: "10m"
        memory: "64Mi"
      limits:
        cpu: "100m"
        memory: "128Mi"
    # ...
