pod-003.yaml
apiVersion: v1
kind: Pod
# ...
spec:
  containers:
  # ...
  tolerations:
  - key: "role"
    operator: "Equal"
    value: "ingress"
    effect: "NoSchedule"
