pod-004.yaml
apiVersion: v1
kind: Pod
# ...
spec:
  containers:
  # ...
  affinity:
    nodeAffinity:
      requiredDuringSchedulingRequiredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: "role"
            operator: "Equal"
            value: "ingress"
            effect: "NoSchedule"
