pod-005.yaml
apiVersion: v1
kind: Pod
# ...
spec:
  containers:
  # ...
  affinity:
    # ...
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "app.kubernetes.io/name"
            operator: In
            values:
            - fizzbuzz
        topologyKey: "kubernetes.io/hostname"
